crates/talkbank-parser-tests/tests/snapshots/offset_tests__parse_main_tier_offset_zero@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(main, errors.into_vec())"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 6,
                                    end: 11,
                                },
                                word_id: None,
                                raw_text: "hello",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "hello",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                lang: None,
                                part_of_speech: None,
                                inline_bullet: None,
                                cached_cleaned_text: CachedStr(
                                    OnceLock(
                                        <uninit>,
                                    ),
                                ),
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period {
                        span: Span {
                            start: 12,
                            end: 13,
                        },
                    },
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: Some(
                    Span {
                        start: 5,
                        end: 14,
                    },
                ),
            },
            span: Span {
                start: 0,
                end: 14,
            },
            speaker_span: Span {
                start: 1,
                end: 4,
            },
        },
    ),
    [],
)
