crates/talkbank-parser-tests/tests/snapshots/offset_tests__parse_main_tier_with_offset@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(main, errors.into_vec())"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 206,
                                    end: 211,
                                },
                                word_id: None,
                                raw_text: "hello",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "hello",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                lang: None,
                                part_of_speech: None,
                                inline_bullet: None,
                                cached_cleaned_text: CachedStr(
                                    OnceLock(
                                        <uninit>,
                                    ),
                                ),
                            },
                        ),
                        Word(
                            Word {
                                span: Span {
                                    start: 212,
                                    end: 217,
                                },
                                word_id: None,
                                raw_text: "world",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "world",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                lang: None,
                                part_of_speech: None,
                                inline_bullet: None,
                                cached_cleaned_text: CachedStr(
                                    OnceLock(
                                        <uninit>,
                                    ),
                                ),
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period {
                        span: Span {
                            start: 218,
                            end: 219,
                        },
                    },
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: Some(
                    Span {
                        start: 205,
                        end: 220,
                    },
                ),
            },
            span: Span {
                start: 200,
                end: 220,
            },
            speaker_span: Span {
                start: 201,
                end: 204,
            },
        },
    ),
    [],
)
