crates/talkbank-parser-tests/tests/snapshots/offset_tests__parse_mor_tier_offset_zero@Direct.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(mor, errors.into_vec())"
---
(
    Some(
        MorTier {
            tier_type: Mor,
            items: MorItems(
                [
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "pro",
                            ),
                            lemma: MorStem(
                                "I",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "v",
                            ),
                            lemma: MorStem(
                                "want",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                ],
            ),
            terminator: Some(
                ".",
            ),
            span: Span {
                start: 0,
                end: 0,
            },
        },
    ),
    [],
)
