crates/talkbank-parser-tests/tests/snapshots/offset_tests__parser_equivalence_mor_tier_with_offset.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(mor_dp, mor_tsp, are_semantically_equal)"
---
(
    Some(
        MorTier {
            tier_type: Mor,
            items: MorItems(
                [
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "pro",
                            ),
                            lemma: MorStem(
                                "I",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "v",
                            ),
                            lemma: MorStem(
                                "want",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                ],
            ),
            terminator: Some(
                ".",
            ),
            span: Span {
                start: 0,
                end: 0,
            },
        },
    ),
    Some(
        MorTier {
            tier_type: Mor,
            items: MorItems(
                [
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "pro",
                            ),
                            lemma: MorStem(
                                "I",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "v",
                            ),
                            lemma: MorStem(
                                "want",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                ],
            ),
            terminator: Some(
                ".",
            ),
            span: Span {
                start: 294,
                end: 315,
            },
        },
    ),
    true,
)
